--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,8 @@
     "@nestjs/swagger": "^6.1.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -47,6 +49,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^4.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
