--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.5",
     "joi": "^17.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
