feat: redis-backend network setting

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,11 +5,13 @@ services:
     container_name: wanted_redis
     ports:
       - 6379:6379
-    restart: always
+    restart: unless-stopped
     command: redis-server /usr/local/conf/redis.conf
     volumes:
       - ./data/:/data
       - ./conf/redis.conf:/usr/local/conf/redis.conf
+    networks:
+      - wanted_networks
   backend:
     image: ghcr.io/preonboarding-nest/wanted_waynehills:latest
     ports:
@@ -17,3 +19,8 @@ services:
     depends_on:
       - redis
     restart: 'on-failure'
+    networks:
+      - wanted_networks
+networks:
+  wanted_networks:
+    driver: bridge
